@@ -5,7 +5,6 @@ import java.util.List;
 import java.time.DayOfWeek;
 import java.time.LocalDate;
 import java.time.temporal.TemporalAdjusters;
-import java.util.stream.Collectors;
 import java.util.Collections;
 
 import org.hibernate.Hibernate;
@@ -60,84 +59,84 @@ public class GamificationServices {
 	}
 	
 	public List<BadgeDTO> getStudentBadges(long studentId) {
-        List<Badge> badges = badgeRepository.findByStudentId(studentId);
-        
-        return badges.stream()
-            .map(b -> new BadgeDTO(b.getId(), b.getName(), b.getDescription(),  b.getObtainedDate()))
-            .collect(Collectors.toList());
-    }
+		List<Badge> badges = badgeRepository.findByStudentId(studentId);
+		
+		return badges.stream()
+			.map(b -> new BadgeDTO(b.getId(), b.getName(), b.getDescription(), 	b.getObtainedDate()))
+			.toList();
+	}
 	
 	public void updateMissionsProgresses(QuizAttempt quizAttempt) {
-        Student student = ((Student)Hibernate.unproxy(quizAttempt.getStudent()));
-        
-        for (MissionProgress missionProgress : missionsProgressesRepository.findByStudentId(student.getId())) {
-        	if (missionProgress.isCompleted()) {
-        		continue;
-        	}
-        	
-        	Mission mission = missionProgress.getMission(); 
-        	
-        	int newProgress = mission.getProgress(missionProgress.getCurrentCount(), quizAttempt);
-            updateAndSaveProgress(missionProgress, newProgress);
-        }
+		Student student = ((Student)Hibernate.unproxy(quizAttempt.getStudent()));
+		
+		for (MissionProgress missionProgress : missionsProgressesRepository.findByStudentId(student.getId())) {
+			if (missionProgress.isCompleted()) {
+				continue;
+			}
+			
+			Mission mission = missionProgress.getMission();	
+			
+			int newProgress = mission.getProgress(missionProgress.getCurrentCount(), quizAttempt);
+			updateAndSaveProgress(missionProgress, newProgress);
+		}
 	}
 	
 	public void updateMissionsProgresses(long studentId, boolean isVictory) {
 		for (MissionProgress missionProgress : missionsProgressesRepository.findByStudentId(studentId)) {
 			Mission mission = missionProgress.getMission();
 
-			if (!missionProgress.isCompleted() && mission instanceof ChallengeNumberMission) {
-				if (isVictory) {
-					updateAndSaveProgress(missionProgress, missionProgress.getCurrentCount() + 1);
-				}
+			if (!missionProgress.isCompleted() && mission instanceof ChallengeNumberMission && isVictory) {
+				updateAndSaveProgress(missionProgress, missionProgress.getCurrentCount() + 1);
 			}
 		}
 	}
-    
-    private void updateAndSaveProgress(MissionProgress progress, int newCurrentCount) {
-    	progress.setCurrentCount(newCurrentCount);
-    	
-    	if (newCurrentCount >= progress.getGoal()) {
-    		progress.setCurrentCount(progress.getGoal());
-    		if (!progress.isCompleted()) {
-                progress.setCompleted(true);
-                Student realStudent = (Student) Hibernate.unproxy(progress.getStudent());
-                Badge newBadge = new Badge(progress.getMission(), realStudent);
-                badgeRepository.save(newBadge);
-            }
-    	}
-    	missionsProgressesRepository.save(progress);
-    }
-    
-    private boolean isMissionListExpired(List<MissionProgress> missions) {
-    	if (missions.isEmpty()) return true;
-    	MissionProgress sample = missions.get(0);
-        LocalDate assignmentDate = sample.getAssignmentDate();
-        if (assignmentDate == null) {
-        	return true;
-        }
+	
+	private void updateAndSaveProgress(MissionProgress progress, int newCurrentCount) {
+		progress.setCurrentCount(newCurrentCount);
+		
+		if (newCurrentCount >= progress.getGoal()) {
+			progress.setCurrentCount(progress.getGoal());
+			if (!progress.isCompleted()) {
+				progress.setCompleted(true);
+				Student realStudent = (Student) Hibernate.unproxy(progress.getStudent());
+				Badge newBadge = new Badge(progress.getMission(), realStudent);
+				badgeRepository.save(newBadge);
+			}
+		}
+		missionsProgressesRepository.save(progress);
+	}
+	
+	private boolean isMissionListExpired(List<MissionProgress> missions) {
+		if (missions.isEmpty()) return true;
+		MissionProgress sample = missions.get(0);
+		LocalDate assignmentDate = sample.getAssignmentDate();
+		if (assignmentDate == null) {
+			return true;
+		}
 
-        LocalDate today = LocalDate.now();
-        LocalDate thisMonday = today.with(TemporalAdjusters.previousOrSame(DayOfWeek.MONDAY));
+		LocalDate today = LocalDate.now();
+		LocalDate thisMonday = today.with(TemporalAdjusters.previousOrSame(DayOfWeek.MONDAY));
 
-        return assignmentDate.isBefore(thisMonday);
-    }
-    
-    @Transactional
-    public void refreshWeeklyMissions(long userId) {
-    	missionsProgressesRepository.deleteByStudentId(userId);
-    	
-    	List<Mission> allMissions = missionsRepository.findAll();
-    	Collections.shuffle(allMissions);
-        List<Mission> selectedMissions = allMissions.stream()
-                                                    .limit(4)
-                                                    .collect(Collectors.toList());
-        Student studentReference = new Student(); 
-        studentReference.setId(userId); 
+		return assignmentDate.isBefore(thisMonday);
+	}
+	
+	@Transactional
+	public void refreshWeeklyMissions(long userId) {
+		missionsProgressesRepository.deleteByStudentId(userId);
+		
+		List<Mission> allMissions = missionsRepository.findAll();
+		Collections.shuffle(allMissions);
+		
+		List<Mission> selectedMissions = allMissions.stream()
+												    .limit(4)
+												    .toList();
+		
+		Student studentReference = new Student();	
+		studentReference.setId(userId);	
 
-        for (Mission m : selectedMissions) {
-            MissionProgress mp = new MissionProgress(m, studentReference, m.getGoal());
-            missionsProgressesRepository.save(mp);
-        }
-    }
+		for (Mission m : selectedMissions) {
+			MissionProgress mp = new MissionProgress(m, studentReference, m.getGoal());
+			missionsProgressesRepository.save(mp);
+		}
+	}
 }
